--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,4 +1,8 @@
-.main-container {
+#main-container {
   height: 100vh;
   width: 100vw;
+}
+
+.mat-drawer-content {
+  margin-right: 0 !important;
 }
