--- a/src/app/shared/components/deck-list-item/deck-list-item.component.scss
+++ b/src/app/shared/components/deck-list-item/deck-list-item.component.scss
@@ -3,7 +3,7 @@
   box-shadow: 0px 0px 19px -1px rgba(127, 127, 127, 0.49);
   padding: 1em;
   border-radius: 15px;
-  height: 6em;
+  height: 8em;
 }
 
 .title {
